@@ -98,6 +98,9 @@ void            geda_toolbar_append_widget       (GedaToolbar     *toolbar,
                                                   const char      *tooltip_private_text);
 
 int             geda_toolbar_get_orientation     (GedaToolbar     *toolbar);
+void            geda_toolbar_set_orientation     (GedaToolbar     *toolbar,
+                                                  int              orientation);
+
 GtkToolbarStyle geda_toolbar_get_style           (GedaToolbar     *toolbar);
 void            geda_toolbar_set_style           (GedaToolbar     *toolbar,
                                                   GtkToolbarStyle  style);
